Fixed top bar z-index conflict with navigation
where the active button was showing on top of the bar

--- a/Client/Shared/SiteLayout/TopNavBar.razor.css
+++ b/Client/Shared/SiteLayout/TopNavBar.razor.css
@@ -44,7 +44,8 @@
     .top-row {
         position: sticky;
         top: 0;
-        z-index: 1;
+        /* Must be at least 2 to not conflict with blazor pagination active button style */
+        z-index: 2;
     }
 
     .top-row {
